--- a/Python/Serial_Testes/Serial_00/teste.ipynb
+++ b/Python/Serial_Testes/Serial_00/teste.ipynb
@@ -23,6 +23,115 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "f6864d0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2189.000000</td>\n",
+       "      <td>2188.000000</td>\n",
+       "      <td>2188.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.000232</td>\n",
+       "      <td>-0.000145</td>\n",
+       "      <td>0.004011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>0.000011</td>\n",
+       "      <td>0.032100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.000577</td>\n",
+       "      <td>-0.753871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000228</td>\n",
+       "      <td>-0.000147</td>\n",
+       "      <td>0.005358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000231</td>\n",
+       "      <td>-0.000145</td>\n",
+       "      <td>0.005384</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.000234</td>\n",
+       "      <td>-0.000143</td>\n",
+       "      <td>0.005408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>0.000289</td>\n",
+       "      <td>-0.000134</td>\n",
+       "      <td>0.005477</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 0            1            2\n",
+       "count  2189.000000  2188.000000  2188.000000\n",
+       "mean      0.000232    -0.000145     0.004011\n",
+       "std       0.000007     0.000011     0.032100\n",
+       "min       0.000000    -0.000577    -0.753871\n",
+       "25%       0.000228    -0.000147     0.005358\n",
+       "50%       0.000231    -0.000145     0.005384\n",
+       "75%       0.000234    -0.000143     0.005408\n",
+       "max       0.000289    -0.000134     0.005477"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"../../../Arduino_Code/leituras_mpu6050_04/veloc_remocao\", sep = ',', header=None)\n",
+    "\n",
+    "df.describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "ce52550b",
    "metadata": {},
